# rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: CLAUDE.md
.claude/plans/: implementation-plan.md  pure-rust-toolchain.md
codegen/: Cargo.toml  build.rs
codegen/src/: arm64.rs  backend.rs  codegen.rs  encoders.rs  lib.rs  link.rs  lir.rs  mir2lir.rs
codegen/tests/: asm.rs  cast_ops.rs  closure.rs  exit42.rs  fnptr.rs  hello_world.rs  run_integration.sh  size_ops.rs  struct_ops.rs
core/: Cargo.toml
core/src/: arena.rs  channel.rs  core_types.rs  lib.rs  runtime.rs
darwin-sys/: Cargo.toml
darwin-sys/src/: dir.rs  env.rs  error.rs  fs.rs  lib.rs  process.rs  rand.rs  signal.rs  sync.rs  thread.rs  time.rs
darwin-sys/src/ffi/: fs.rs  misc.rs  mod.rs  process.rs  signal.rs  sync.rs  thread.rs  types.rs
darwin-sys/tests/: integration.rs
docs/explanation/: design.md  why.md
docs/how-to/: migration.md
docs/tutorials/: cyb-cell.md  cyberos-cell.md  rsc-companion.md
link/: Cargo.toml
link/src/: lib.rs  main.rs  sign.rs
macho-linker/: Cargo.toml
macho-linker/src/: arm64.rs  dyld.rs  emit.rs  input.rs  layout.rs  main.rs  reloc.rs  resolve.rs
macho-linker/tests/: exit42.s  hello.s  link_integration.sh
macros/: Cargo.toml
mir-format/: Cargo.toml
pure-rust-check/: Cargo.toml
reference/: README.md  addressed.md  async.md  cells.md  compiler.md  deterministic.md  epoch.md  errors.md  regions.md  registers.md  restrictions.md  stdlib.md  step.md
rsc/: Cargo.toml  build.rs
rsc/src/: main.rs  (+1 more)
spec/: README.md
tests/: run_tests.sh
(+64 files in other folders)
